# nordic-dongle-demo

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
boards/: nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
docs/: build_instructions.md  system_design.md
src/: main.c
